--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,7 +14,7 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d2cenl0crtmzsc.cloudfront.net/R3ixKD4Jl"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d2wf95os3tobj4.cloudfront.net/C7nxKD4Jm"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
 <h2>川普参加首次荣誉仪式</h2>
 <p>美国总统唐纳德·川普（特朗普）参加了首次荣誉仪式，该仪式的参与者包括来自宾夕法尼亚州巴特勒（Butler, Pennsylvania）的急救人员代表。</p>
@@ -268,13 +268,14 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
+
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418273.md#1">川普就职后 巴拿马审计运河的中国港口运营商</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418294.md#1">贸易、关税、能源市场对川普就职演说的反应</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418097.md#1">【名家专栏】川普2.0强势登台 中共如何应对</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/28/n10747311.md#1" target="_blank">裴毅然：中共抗战“游而不击”的史证（一）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/7/5/n11367520.md#1" target="_blank">响彻在世界政坛的正义之声（中）</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank">这些官员为何起诉江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/4/n10889466.md#1" target="_blank">裴毅然：中共小知党（四）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
